# triku

./: .flake8  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: triku_cicd.yml
data/Mereu_2020/cell_types/: human.csv  mouse.csv
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst  modules.rst  triku-work.rst  usage.rst
docs/source/api/: modules.rst  triku.cli.rst  triku.pl.rst  triku.pp.rst  triku.rst  triku.tl.rst  triku.utils.rst
docs/source/imgs/: triku.ai
logo/: triku.ai
notebooks/: 0_Preparing_environment.ipynb  1_Reads_in_knn_cells_as_a_method_for_feature_selection.ipynb  2_Generation_of_artificial_datasets.ipynb  3_Why_applying_median_correction_is_a_good_option.ipynb  4_Triku_stability_measures.ipynb  5_Comparing_feature_selection_methods.ipynb  6_Running_triku_on_continuous_datasets.ipynb  7_Triku_time_efficiency.ipynb  Generation of artificial datasets.ipynb  MANIFEST.in  Simulated data to evaluate EMD as a metric for detection of genes with community expression.ipynb  Triku_genes.ipynb  setup.py
notebooks/code/: comparing_feat_sel.py  file_download_and_generation.py  robustness_functions.py
notebooks/triku_nb_code/: __init__.py  comparing_feat_sel.py  file_download_and_generation.py  palettes_and_cmaps.py  robustness_functions.py
scripts/: triku
triku/: README.md  __init__.py  genutils.py  logg.py  pl.py  tl.py
triku/cli/: __init__.py  cli_plot_entropy.py  cli_triku.py
triku/pl/: __init__.py  pl_entropy.py
triku/pp/: __init__.py  _remove_outliers.py
triku/test/: import_tests.py  run_test.sh  run_tests.sh  test_args.py  test_general_runs.py  test_imports.py  test_matrices_ops.py  test_units.py
triku/tl/: __init__.py  _triku.py  _triku_functions.py  triku.py
triku/utils/: __init__.py  _general_utils.py  _triku_tl_entropy_utils.py  _triku_tl_gene_idx_utils.py  _triku_tl_utils.py
